--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
 .App {
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  align-items: center;
 
   .table-title {
     margin-bottom: 50px;
